k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-serving
  labels:
    app.kubernetes.io/part-of: mlops-pipeline-lab
